tests/positive/test_genesis.veldanava
#Pre_Descent Primordial_Regalia
Primordial_Regalia;

genesis func main():
    genesis print("Hello from genesis func!");
;
