tests/negative/missing_genesis_top.veldanava
#Pre_Descent Primordial_Regalia
Primordial_Regalia;

func main():
    genesis print("no genesis prefix");
;
